# SOAP_MCP

./: Core1106Session - Copy.xsd_bak  Core1106SessionService - Copy.wsdl_bak  LICENSE  README.md  development_plan.md  implementation_plan.md  pyproject.toml
claude_config/: claude_desktop_config.json
examples/: teamcenter_api.json  teamcenter_api_simplyfied.json  teamcenter_api_simplyfied_behavior.json  teamcenter_api_simplyfied_behavior_V1.0.json
soapweaver/: __init__.py  cli.py  models.py  server.py
wsdls/: Core0806DataManagement.xsd  Core0806DataManagementService.wsdl  Core1106Session.xsd  Core1106SessionService.wsdl
