[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soapweaver"
version = "0.1.0"
description = "Convert any web SOAP API into an MCP server - the universal API-to-MCP bridge"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "MjrRawne", email = "fmigneault@hotmail.com"},
]
keywords = ["mcp", "soap", "soapweaver", "model-context-protocol", "fastmcp", "stdio", "soap-api", "bridge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastmcp>=2.8.1",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
soapweaver = "soapweaver.cli:main"

[project.urls]
Homepage = "https://github.com/MjrRawne/SOAP_MCP"
Repository = "https://github.com/MjrRawne/SOAP_MCP"
Issues = "https://github.com/MjrRawne/SOAP_MCP/issues"
Documentation = "https://github.com/MjrRawne/SOAP_MCP#readme"
Changelog = "https://github.com/MjrRawne/SOAP_MCP/releases"

[tool.hatch.build.targets.wheel]
packages = ["soapweaver"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
